--- a/Prevu.Synoptics.V2150_Planeta/D018.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D018.xaml
@@ -52,9 +52,9 @@
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
         <Labels:DeviceLabel 
-            ComponentName="018-21-CV1" Canvas.Left="25" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            ComponentName="018-21-CV1" Canvas.Left="17" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="018-21-CV2" Height="50" Canvas.Left="221" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="018-21-CV2" Height="50" Canvas.Left="229" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="169" Canvas.Top="39" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
