--- a/Prevu.Synoptics.V2150_Planeta/D020.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D020.xaml
@@ -133,8 +133,8 @@
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
         <Rectangle HorizontalAlignment="Center" Height="86" VerticalAlignment="Top" Width="376" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="22" Canvas.Top="381"/>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="551" Canvas.Top="423"/>
-        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="58" Width="40" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="581" Canvas.Top="416">
+        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="534" Canvas.Top="398"/>
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="58" Width="40" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="564" Canvas.Top="390">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -144,7 +144,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="277" Canvas.Top="275">
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="286" Canvas.Top="289">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -154,7 +154,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="53" Canvas.Top="306">
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="44" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="55" Canvas.Top="318">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -186,15 +186,15 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" 
          VerticalAlignment="Top" 
          ComponentName="020-21-CV1" Canvas.Left="148" Canvas.Top="265"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         VerticalAlignment="Top" 
+         ComponentName="020-03-MA1" Canvas.Left="411" Canvas.Top="274"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
          VerticalAlignment="Top" 
-         ComponentName="020-03-MA1" Canvas.Left="405" Canvas.Top="275"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-         VerticalAlignment="Top" 
-         ComponentName="020-02-MA1" Canvas.Left="257" Canvas.Top="229"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-         VerticalAlignment="Top" 
-         ComponentName="020-04-MA1" Canvas.Left="556" Canvas.Top="366"/>
+         ComponentName="020-02-MA1" Canvas.Left="264" Canvas.Top="231"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         VerticalAlignment="Center" 
+         ComponentName="020-04-MA1" Canvas.Left="539" Canvas.Top="340"/>
         <Labels:DeviceLabel 
             ComponentName="020-24-CV1" Canvas.Left="411" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:CV_ValveDouble Canvas.Left="425" Canvas.Top="152" Height="44" Width="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
