--- a/Prevu.Synoptics.V2150_Planeta/D170.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D170.xaml
@@ -50,7 +50,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Belts:NT_Diverter Canvas.Left="15" Canvas.Top="58" Height="154" Width="376" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_NT_Belt_wMetalDetector_Diverter Height="154" Width="376" HorizontalAlignment="Center" Canvas.Left="15" VerticalAlignment="Top" Canvas.Top="58" />
         <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="56" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
