--- a/Prevu.Synoptics.V2150_Planeta/D301.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D301.xaml
@@ -14,10 +14,11 @@
         <Rectangle Height="2" Stroke="Black" Width="61" Canvas.Left="239" Canvas.Top="443" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Rectangle Height="81" Stroke="Black" Width="2" Canvas.Left="105" Canvas.Top="364" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="2" Stroke="Black" Width="63" Canvas.Left="105" Canvas.Top="443" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Silos:SL50MC_BufferSilo_ScrewDetail Canvas.Left="39" Canvas.Top="33" Height="344" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_SL_DETAIL_BufferSilo_ExtractionScrew Canvas.Left="39" Canvas.Top="33" Height="344" Width="323" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
             ComponentName="301-01-MA1" Canvas.Left="155" Canvas.Top="353" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="301-02-MA1" Canvas.Left="155" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        
     </Canvas>
 </UserControl>
