--- a/Prevu.Synoptics.V2150_Planeta/D510_2.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D510_2.xaml
@@ -8,43 +8,13 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="360" Width="439" >
-        <Labels:Pipe Width="62" Color="Water" StatusComponent="510-22-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="297" Canvas.Top="300" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="64" StatusComponent="510-21-CV1" Color="Oil" Canvas.Left="156" Canvas.Top="140" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="51" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="72" Canvas.Top="94" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="63" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="161" Canvas.Top="187" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="63" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="164" Canvas.Top="94" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="68" Color="Water" StatusComponent="510-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="294" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="51" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="72" Canvas.Top="187" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:DCE_DryingCentrifuge Height="234" Width="156" RenderTransformOrigin="0.5,0.5" Canvas.Left="220" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
-        <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="127" Canvas.Top="107" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Canvas Height="276" Width="415" >
+        <Labels:Pipe Width="64" StatusComponent="510-21-CV1" Color="Oil" Canvas.Left="142" Canvas.Top="133" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="51" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="58" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="63" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="147" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="63" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="150" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="51" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="58" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="113" Canvas.Top="100" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -54,7 +24,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="95" Canvas.Top="139" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="81" Canvas.Top="132" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -64,7 +34,7 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="95" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="81" Canvas.Top="39" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -74,25 +44,7 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="278" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:CV_Valve.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve.RenderTransform>
-        </Machines:CV_Valve>
-        <Labels:DeviceLabel 
-            ComponentName="510-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="27" Canvas.Top="117" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="510-24-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="100" Canvas.Top="22" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="510-23-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="100" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="510-22-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="215" Canvas.Top="237" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="72" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="168" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -102,7 +54,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="72" Canvas.Top="82" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -112,15 +64,12 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="313" Canvas.Top="330" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="184" Canvas.Top="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel 
+            ComponentName="510-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="13" Canvas.Top="110" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel 
+            ComponentName="510-24-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="86" Canvas.Top="15" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel 
+            ComponentName="510-23-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="86" Canvas.Top="205" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
