--- a/Prevu.Synoptics.V2150_Planeta/D527.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D527.xaml
@@ -8,13 +8,13 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
-    <Canvas Height="342" Width="293">
-        <Machines:VRC_WaterCollectingTank Canvas.Left="25" Canvas.Top="27" Height="287" HorizontalAlignment="Center" VerticalAlignment="Top" Width="241"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="527-61-LEV" SignalName="LSHA" Canvas.Left="157" Canvas.Top="47" />
+    <Canvas Height="326" Width="283">
+        <Machines:V01_Hopper Canvas.Left="13" Canvas.Top="13" Height="300" Width="260" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="527-61-LEV" SignalName="LSHA" Canvas.Left="147" Canvas.Top="33" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Top" 
-		ComponentName="527-61-LEV" Canvas.Left="34" Canvas.Top="146"/>
-        <Labels:SignalLabel ComponentName="527-61-LEV" SignalName="LSH" Canvas.Left="157" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:SignalLabel ComponentName="527-61-LEV" SignalName="LSL" Canvas.Left="157" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Center" />
+		VerticalAlignment="Center" 
+		ComponentName="527-61-LEV" Canvas.Left="28" Canvas.Top="112"/>
+        <Labels:SignalLabel ComponentName="527-61-LEV" SignalName="LSH" Canvas.Left="147" Canvas.Top="96" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:SignalLabel ComponentName="527-61-LEV" SignalName="LSL" Canvas.Left="147" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
