--- a/Prevu.Synoptics.V2150_Planeta/D557.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D557.xaml
@@ -8,9 +8,9 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" xmlns:VibratingScreens="clr-namespace:Prevu.Drawings.Machines.VibratingScreens;assembly=Prevu.Drawings" xmlns:Belts="clr-namespace:Prevu.Drawings.Machines.Belts;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D557" 
              mc:Ignorable="d"  
-            d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="443" Width="656">
-        <Labels:Pipe Width="94" StatusComponent="557-02-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="518" Canvas.Top="366" HorizontalAlignment="Left" VerticalAlignment="Center">
+            d:Background="{DynamicResource MaterialDesignPaper}" >
+    <Canvas Height="394" Width="615">
+        <Labels:Pipe Width="94" StatusComponent="557-02-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="504" Canvas.Top="330" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -20,7 +20,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="50" StatusComponent="557-03-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="507" Canvas.Top="348" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="50" StatusComponent="557-03-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="493" Canvas.Top="312" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -30,7 +30,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="50" StatusComponent="557-03-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="575" Canvas.Top="340" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="50" StatusComponent="557-03-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="561" Canvas.Top="304" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -40,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="52" StatusComponent="557-04-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="222" Canvas.Top="198" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
+        <Labels:Pipe Width="52" StatusComponent="557-04-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="208" Canvas.Top="162" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -50,8 +50,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="38" StatusComponent="557-04-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="246" Canvas.Top="174" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="80" StatusComponent="557-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="312" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="38" StatusComponent="557-04-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="232" Canvas.Top="138" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="80" StatusComponent="557-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="298" Canvas.Top="171" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -61,8 +61,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="50" StatusComponent="557-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="305" Canvas.Top="172" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="46" StatusComponent="557-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="270" Canvas.Top="137" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="50" StatusComponent="557-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="291" Canvas.Top="136" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="46" StatusComponent="557-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="256" Canvas.Top="101" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -72,9 +72,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="60" StatusComponent="557-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="238" Canvas.Top="118" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Belts:NT_Belt_wMagneticRoll Canvas.Left="305" Canvas.Top="239" HorizontalAlignment="Left" Height="104" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="50" StatusComponent="556-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="22" Canvas.Top="53" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="60" StatusComponent="557-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="224" Canvas.Top="82" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="50" StatusComponent="556-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="10" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -84,20 +83,16 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <VibratingScreens:ALV_VibratingFeeder Canvas.Left="26" Canvas.Top="65" Height="125" Width="220" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="557-01-MA1" Canvas.Left="81" Canvas.Top="119" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Belts:MagneticRoll Canvas.Left="268" Canvas.Top="152" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="557-04-MA1" Canvas.Left="305" Canvas.Top="70" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="557-04-MA1" Canvas.Left="319" Canvas.Top="106" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="557-02-MA1" Canvas.Left="322" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="557-02-MA1" Canvas.Left="336" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="557-03-MA1" Canvas.Left="512" Canvas.Top="189" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="226" Canvas.Top="204" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="510" Canvas.Top="348" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="578" Canvas.Top="348" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="32" Canvas.Top="32" HorizontalAlignment="Left" VerticalAlignment="Top">
+            ComponentName="557-03-MA1" Canvas.Left="498" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="212" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="496" Canvas.Top="312" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="564" Canvas.Top="312" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="20" Canvas.Top="12" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -107,7 +102,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="550" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="536" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -117,5 +112,10 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
+        <Machines:V01_ALV_VibratingFeeder Canvas.Left="15" Canvas.Top="45" Height="91" Width="219" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel 
+            ComponentName="557-01-MA1" Canvas.Left="74" Canvas.Top="102" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_MagneticRoll Canvas.Left="254" Canvas.Top="116" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_NT_Belt_wMagneticRoll Canvas.Left="291" Canvas.Top="203" Height="104" Width="314" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
