--- a/Prevu.Synoptics.V2150_Planeta/D890.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D890.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="427" Width="452">
-        <FlakesSorting:FKS_FlakesSorter_wRecovery Canvas.Left="10" Canvas.Top="10" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="10" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="890-61-LEV" SignalName="LSHA1" Canvas.Left="54" Canvas.Top="39"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSH" Canvas.Left="101" Canvas.Top="94" />
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSL" Canvas.Left="101" Canvas.Top="185"/>
