--- a/Prevu.Synoptics.V2150_Planeta/D953.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D953.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="344" Width="368">
-        <Machines:BBF_BigBagFilling Height="320" VerticalAlignment="Center" HorizontalAlignment="Center" Width="343" Canvas.Left="10" Canvas.Top="10" />
+        <Machines:V01_BBF_SingleBag Canvas.Left="10" Canvas.Top="10" Height="320" Width="343" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="953-62-BAG" SignalName="LSH" Canvas.Left="146" Canvas.Top="72"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 		VerticalAlignment="Top" 
