--- a/Prevu.Synoptics.V2150_Planeta/P020.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/P020.xaml
@@ -21,7 +21,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="76" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1050" Canvas.Top="550" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+
+        <Labels:Pipe Width="70" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1053" Canvas.Top="553" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -42,7 +43,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="78" StatusComponent="024-01-MA1" PipeHeight="Medium" Canvas.Left="599" Canvas.Top="372" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1025" Canvas.Top="516" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1025" Canvas.Top="522" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="89" VerticalAlignment="Center" Canvas.Top="739" StatusComponent="029-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="334" Height="24" HorizontalAlignment="Left" Color="Air">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -55,7 +56,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="94" VerticalAlignment="Center" Canvas.Top="746" StatusComponent="029-01-MA1" PipeHeight="Medium" Canvas.Left="469" HorizontalAlignment="Left" />
         <Labels:Pipe Width="138" Canvas.Top="746" StatusComponent="027-01-MA1" PipeHeight="Medium" Canvas.Left="617" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="148" StatusComponent="026-01-MA1" PipeHeight="Medium" Canvas.Left="436" Canvas.Top="563" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="80" StatusComponent="026-01-MA1" PipeHeight="Medium" Canvas.Left="436" Canvas.Top="563" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="163" VerticalAlignment="Center" Canvas.Top="640" StatusComponent="026-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="359" HorizontalAlignment="Left">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -66,7 +67,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="76" StatusComponent="020-22-CV1" PipeHeight="Medium" Canvas.Left="400" Canvas.Top="372"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="85" StatusComponent="020-22-CV1" PipeHeight="Medium" Canvas.Left="391" Canvas.Top="372"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="168" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="233" Canvas.Top="275">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -138,16 +139,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:MaterialInletOutlet HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="100" Width="98" Canvas.Left="28" Canvas.Top="149">
-            <Machines:MaterialInletOutlet.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:MaterialInletOutlet.RenderTransform>
-        </Machines:MaterialInletOutlet>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="206" Canvas.Top="66">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -158,6 +149,7 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
+        <Machines:V01_SB_Sfaldaballe Canvas.Left="233" Canvas.Top="355" Height="166" Width="167" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="1" Width="144" Canvas.Left="469" Canvas.Top="367"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="3" Width="155" Canvas.Left="548" Canvas.Top="266">
             <Machines:NT_ConveyorBelt.RenderTransform>
@@ -169,7 +161,6 @@
                 </TransformGroup>
             </Machines:NT_ConveyorBelt.RenderTransform>
         </Machines:NT_ConveyorBelt>
-        <Machines:SB_Sfaldaballe HorizontalAlignment="Left" VerticalAlignment="Center" Height="165" Width="167" Canvas.Left="242" Canvas.Top="356"/>
         <Machines:Buffer_belt HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="192" Canvas.Left="99" Canvas.Top="185"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="656" Canvas.Top="302"/>
         <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="36" Width="31" Canvas.Left="249" Canvas.Top="332"/>
@@ -183,34 +174,14 @@
             VerticalAlignment="Center" 
             ComponentName="020-41-LT1" Canvas.Left="158" Canvas.Top="302"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="024-01-MA1" Canvas.Left="541" Canvas.Top="392"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020" Canvas.Left="139" Canvas.Top="484"/>
+            VerticalAlignment="Top" 
+            ComponentName="024-01-MA1" Canvas.Left="535" Canvas.Top="401"/>
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020" Canvas.Left="55" Canvas.Top="470"/>
         <Labels:DeviceLabel 
-            ComponentName="020-DEBALER" Canvas.Left="195" Canvas.Top="484" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <VibratingScreens:ALV_VibratingFeeder Canvas.Left="514" Canvas.Top="526" Height="98" Width="176" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
-            <VibratingScreens:ALV_VibratingFeeder.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </VibratingScreens:ALV_VibratingFeeder.RenderTransform>
-        </VibratingScreens:ALV_VibratingFeeder>
+            ComponentName="020-DEBALER" Canvas.Left="125" Canvas.Top="470" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel 
-            ComponentName="026-01-MA1" Canvas.Left="566" Canvas.Top="608" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="026-01-MA1" Canvas.Left="553" Canvas.Top="625" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="670" Canvas.Left="284" HorizontalAlignment="Left" ComponentName="029-01-MA1"/>
-        <Machines:DV_Diverter_T VerticalAlignment="Center" Canvas.Top="699" RenderTransformOrigin="0.5,0.5" Canvas.Left="391" Height="80" HorizontalAlignment="Left">
-            <Machines:DV_Diverter_T.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DV_Diverter_T.RenderTransform>
-        </Machines:DV_Diverter_T>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="304" Canvas.Top="725" Height="52" Width="48" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="553" Canvas.Top="741" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
@@ -245,9 +216,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <DCE:VRR_DryTrommel Canvas.Left="831" Canvas.Top="457" HorizontalAlignment="Center" VerticalAlignment="Top" Height="123" Width="201"/>
         <Labels:DeviceLabel 
-            ComponentName="030-01-MA1" Canvas.Left="992" Canvas.Top="402" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="030-01-MA1" Canvas.Left="938" Canvas.Top="406" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="865" Canvas.Top="596" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="957" Canvas.Top="596" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="240" StatusComponent="027-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1006" Canvas.Top="171" HorizontalAlignment="Left" VerticalAlignment="Center">
@@ -314,10 +284,23 @@
         <Machines:NT_ConveyorBelt Height="1" Width="152" Canvas.Left="1201" Canvas.Top="680" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="1" Width="154" Canvas.Left="1060" Canvas.Top="580" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
-            ComponentName="098-01-MA1" Canvas.Left="1255" Canvas.Top="625" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            ComponentName="098-01-MA1" Canvas.Left="1277" Canvas.Top="619" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
-            ComponentName="096-01-MA1" Canvas.Left="1114" Canvas.Top="525" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="096-01-MA1" Canvas.Left="1124" Canvas.Top="518" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="165" Canvas.Top="65" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="028-LUB" DetailsPageName="D028" Canvas.Left="973" Canvas.Top="140" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_Material_Inlet_Outlet Canvas.Left="60" Canvas.Top="164" Height="69" Width="53"/>
+        <Machines:V01_ALV_VibratingFeeder Canvas.Left="486" Canvas.Top="515" Height="114" Width="211" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <Machines:V01_ALV_VibratingFeeder.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:V01_ALV_VibratingFeeder.RenderTransform>
+        </Machines:V01_ALV_VibratingFeeder>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="402" Canvas.Top="712" Height="51" Width="81" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VRR_DryTrommel Canvas.Left="831" Canvas.Top="461" Height="122" Width="201" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
