--- a/Prevu.Synoptics.V2150_Planeta/P460.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/P460.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P460" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Color="Water" Width="158" RenderTransformOrigin="0.5,0.5" StatusComponent="463-01-MA1" Canvas.Left="928" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="158" RenderTransformOrigin="0.5,0.5" StatusComponent="463-01-MA1" Canvas.Left="948" Canvas.Top="312" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -19,9 +19,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="279" RenderTransformOrigin="0.5,0.5" StatusComponent="463-01-MA1" Canvas.Left="730" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="76" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="160" Canvas.Top="99" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="76" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="193" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Color="Water" Width="299" RenderTransformOrigin="0.5,0.5" StatusComponent="463-01-MA1" Canvas.Left="730" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="76" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="96" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="98" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="118" Canvas.Top="114" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -94,7 +94,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="339" Color="Water" StatusComponent="477-01-MA1" Canvas.Left="810" Canvas.Top="733"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="339" Color="Water" StatusComponent="477-01-MA1" Canvas.Left="810" Canvas.Top="733"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="105" Color="Water" StatusComponent="477-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1094" Canvas.Top="682">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -167,7 +167,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="144" Color="Water" StatusComponent="477-01-MA1" VisibilityComponent="477-23-CV1" Canvas.Left="1228" Canvas.Top="511"/>
         <Rectangle HorizontalAlignment="Left" Height="0" Stroke="Black" VerticalAlignment="Center" Width="50" Canvas.Left="905" Canvas.Top="510"/>
-        <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="544" Canvas.Top="586"/>
+        <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="559" Canvas.Top="586"/>
         <Rectangle HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="356" Canvas.Top="715">
             <d:Rectangle.RenderTransform>
                 <TransformGroup>
@@ -189,7 +189,7 @@
             </Rectangle.RenderTransform>
         </Rectangle>
         <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="349" Canvas.Top="742"/>
-        <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="537" Canvas.Top="610"/>
+        <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="552" Canvas.Top="610"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="1170" Canvas.Top="462">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -220,7 +220,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:EXC_HeatExchanger HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="218" Canvas.Top="588">
+        <Machines:EXC_HeatExchanger HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="218" Canvas.Top="468">
             <Machines:EXC_HeatExchanger.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
@@ -230,9 +230,7 @@
                 </TransformGroup>
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" VerticalAlignment="Center" Height="117" Width="235" Canvas.Left="580" Canvas.Top="681"/>
-        <Machines:VB_VibratingScreen HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="851" Canvas.Top="469"/>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="964" Canvas.Top="700">
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="966" Canvas.Top="713">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -242,7 +240,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="440" Canvas.Top="715">
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Top" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="482" Canvas.Top="728">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -255,25 +253,16 @@
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="958" Canvas.Top="488"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="470-44-FT1" Canvas.Left="500" Canvas.Top="548"/>
+            ComponentName="470-44-FT1" Canvas.Left="515" Canvas.Top="548"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="477-21-CV1" Canvas.Left="1029" Canvas.Top="549"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="464-01-MA1" Canvas.Left="856" Canvas.Top="549"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="470-21-CV1" Canvas.Left="392" Canvas.Top="548"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="473-01-MA1" Canvas.Left="460" Canvas.Top="671"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="470-42-TT1" Canvas.Left="703" Canvas.Top="709"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="470-41-LT1" Canvas.Left="601" Canvas.Top="709"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="477-01-MA1" Canvas.Left="944" Canvas.Top="656"/>
@@ -286,13 +275,13 @@
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="456-01-MA1" 
-            JumpToLabel="455-01-MA1" Canvas.Left="102" Canvas.Top="69"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="474-HEAT" DetailsPageName="D474" Canvas.Left="157" Canvas.Top="597"/>
+            JumpToLabel="455-01-MA1" Canvas.Left="23" Canvas.Top="39"/>
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="474-HEAT" DetailsPageName="D474" Canvas.Left="157" Canvas.Top="477"/>
         <Labels:JumpLabel 
             JumpFromLabel="477-01-MA1" 
             JumpToLabel="283-01-MA1" Canvas.Left="1309" Canvas.Top="479" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="164" StatusComponent="460-03-MA1" PipeHeight="Medium" Canvas.Left="807" Canvas.Top="169" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="184" StatusComponent="456-01-MA1" PipeHeight="Medium" Canvas.Left="316" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="202" StatusComponent="460-03-MA1" PipeHeight="Medium" Canvas.Left="814" Canvas.Top="169" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="198" StatusComponent="456-01-MA1" PipeHeight="Medium" Canvas.Left="302" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="228" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="241" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:STR_Washing_reactor_B Height="217" Width="170" Canvas.Left="430" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
@@ -303,10 +292,10 @@
         <Machines:STR_Washing_reactor_B Height="217" Width="170" Canvas.Left="674" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="460-03-MA1" Canvas.Left="714" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="198" Canvas.Top="162" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="144" Canvas.Top="162" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
-            ComponentName="456-01-MA1" Canvas.Left="311" Canvas.Top="108" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="80" StatusComponent="463-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1062" Canvas.Top="318" HorizontalAlignment="Center" VerticalAlignment="Top">
+            ComponentName="456-01-MA1" Canvas.Left="257" Canvas.Top="104" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="80" StatusComponent="463-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1108" Canvas.Top="348" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -316,27 +305,29 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:DCE_DryingCentrifuge Height="236" Width="146" RenderTransformOrigin="0.5,0.5" Canvas.Left="952" Canvas.Top="105" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
+        <Labels:Pipe Width="155" StatusComponent="466-01-MA1" PipeHeight="Medium" Canvas.Left="1287" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="1140" Canvas.Top="384" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
-            ComponentName="463-01-MA1" Canvas.Left="1040" Canvas.Top="94" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="226" StatusComponent="466-01-MA1" PipeHeight="Medium" Canvas.Left="1156" Canvas.Top="360" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="1080" Canvas.Top="354" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="466-01-MA1" Canvas.Left="1192" Canvas.Top="300" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            ComponentName="466-01-MA1" Canvas.Left="1252" Canvas.Top="323" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel 
             JumpFromLabel="466-01-MA1" 
-            JumpToLabel="510-01-MA1" Canvas.Left="1354" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            JumpToLabel="510-01-MA1" Canvas.Left="1414" Canvas.Top="361" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="460-61-LEV" Canvas.Left="455" Canvas.Top="222" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="460-VIEW" DetailsPageName="D460" Canvas.Left="549" Canvas.Top="222" HorizontalAlignment="Left" VerticalAlignment="Top" HideComponentName="True"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="974" Canvas.Top="149" Height="174" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VB_VibratingScreen Canvas.Left="851" Canvas.Top="469" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="464-01-MA1" Canvas.Left="856" Canvas.Top="549"/>
+        <Machines:V01_VRC_WaterTank Canvas.Left="580" Canvas.Top="671" Height="133" Width="244" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="470-41-LT1" TrendName="LEVEL"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="470-42-TT1" Canvas.Left="712" Canvas.Top="709"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="470-41-LT1" Canvas.Left="602" Canvas.Top="709"/>
+        <Labels:DeviceLabel 
+            ComponentName="463-01-MA1" Canvas.Left="1140" Canvas.Top="122" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
