--- a/Prevu.Synoptics.V2150_Planeta/P485.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/P485.xaml
@@ -12,7 +12,17 @@
              x:Class="Prevu.Synoptics.P485" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="445-01-MA1" Height="24" Canvas.Left="603" Canvas.Top="308" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="440-01-MA1" Height="24" Canvas.Left="231" Canvas.Top="437" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="445-01-MA1" Height="24" Canvas.Left="639" Canvas.Top="322" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -22,7 +32,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="214" RenderTransformOrigin="0.5,0.5" StatusComponent="445-01-MA1" Height="24" Canvas.Left="620" Canvas.Top="203" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="228" RenderTransformOrigin="0.5,0.5" StatusComponent="445-01-MA1" Height="24" Canvas.Left="649" Canvas.Top="210" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,7 +42,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="170" RenderTransformOrigin="0.5,0.5" StatusComponent="445-01-MA1" Height="24" Canvas.Left="725" Canvas.Top="98" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
+        <Labels:Pipe Width="170" RenderTransformOrigin="0.5,0.5" StatusComponent="445-01-MA1" Height="24" Canvas.Left="761" Canvas.Top="98" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -42,7 +52,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="117" RenderTransformOrigin="0.5,0.5" StatusComponent="443-01-MA1" Height="24" Canvas.Left="465" Canvas.Top="308" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="117" RenderTransformOrigin="0.5,0.5" StatusComponent="443-01-MA1" Height="24" Canvas.Left="501" Canvas.Top="322" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -52,7 +62,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="95" RenderTransformOrigin="0.5,0.5" StatusComponent="440-01-MA1" Height="24" Canvas.Left="120" Canvas.Top="462" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="440-01-MA1" Height="24" Canvas.Left="141" Canvas.Top="413" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -62,7 +72,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="73" RenderTransformOrigin="0.5,0.5" StatusComponent="443-02-MA1" Height="24" Canvas.Left="270" Canvas.Top="324" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="169" RenderTransformOrigin="0.5,0.5" StatusComponent="443-02-MA1" Height="24" Canvas.Left="206" Canvas.Top="324" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -72,7 +82,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="446-01-MA1" Height="24" Canvas.Left="863" Canvas.Top="455" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="446-01-MA1" Height="24" Canvas.Left="900" Canvas.Top="455" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -82,7 +92,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="140" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1226" Canvas.Top="324" Color="ByProduct" StatusComponent="448-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="140" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1265" Canvas.Top="324" Color="ByProduct" StatusComponent="448-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -92,7 +102,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="449-01-MA1" Height="18" Canvas.Left="1266" Canvas.Top="455" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="449-01-MA1" Height="18" Canvas.Left="1304" Canvas.Top="455" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -102,7 +112,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="90" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="485-25-CV1" VisibilitySignal="LS1" Canvas.Left="780" Canvas.Top="585" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="90" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="485-25-CV1" VisibilitySignal="LS1" Canvas.Left="818" Canvas.Top="585" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -112,7 +122,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="92" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="485-25-CV1" VisibilitySignal="LS2" Canvas.Left="915" Canvas.Top="590" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="106" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="485-25-CV1" VisibilitySignal="LS2" Canvas.Left="944" Canvas.Top="583" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -122,7 +132,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="90" StatusComponent="449-01-MA1" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="487-25-CV1" VisibilitySignal="LS1" Canvas.Left="1185" Canvas.Top="585" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
+        <Labels:Pipe Width="90" StatusComponent="449-01-MA1" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="487-25-CV1" VisibilitySignal="LS1" Canvas.Left="1224" Canvas.Top="585" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -132,7 +142,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="92" StatusComponent="449-01-MA1" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="487-25-CV1" VisibilitySignal="LS2" Canvas.Left="1320" Canvas.Top="590" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
+        <Labels:Pipe Width="104" StatusComponent="449-01-MA1" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="487-25-CV1" VisibilitySignal="LS2" Canvas.Left="1350" Canvas.Top="584" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -142,26 +152,19 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:VS_Airlock HorizontalAlignment="Center" VerticalAlignment="Top" Height="60" Width="64" Canvas.Left="1265" Canvas.Top="389"/>
-        <Valves:DV_BigBagDiverter_V2 Height="86" Canvas.Left="814" Canvas.Top="480" Width="157" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Valves:DV_BigBagDiverter_V2 Height="86" Canvas.Left="1219" Canvas.Top="480" Width="157" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <BigBag:BBF_DoubleBigBagFilling Canvas.Left="1156" Canvas.Top="597" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <BigBag:BBF_DoubleBigBagFilling Canvas.Left="751" Canvas.Top="597" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
             JumpFromLabel="442-01-MA1" 
-            JumpToLabel="440-01-MA1" Canvas.Left="47" Canvas.Top="439"/>
+            JumpToLabel="440-01-MA1" Canvas.Left="68" Canvas.Top="390"/>
         <Labels:DeviceLabel 
-            ComponentName="487-25-CV1" Canvas.Left="1253" Canvas.Top="543" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="449-01-MA1" Canvas.Left="1332" Canvas.Top="394"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="485-25-CV1" Canvas.Left="848" Canvas.Top="543"/>
-        <Labels:DetailsLabel ComponentName="487-BAGS" DetailsPageName="D487" Canvas.Left="1273" Canvas.Top="651" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="485-BAGS" DetailsPageName="D485" Canvas.Left="868" Canvas.Top="651"/>
-        <Labels:Pipe Width="369" VerticalAlignment="Top" Canvas.Top="251" StatusComponent="448-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="929" Height="20" HorizontalAlignment="Center" Color="ByProduct">
+            ComponentName="487-25-CV1" Canvas.Left="1287" Canvas.Top="538" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="449-01-MA1" Canvas.Left="1369" Canvas.Top="387"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="485-25-CV1" Canvas.Left="884" Canvas.Top="538"/>
+        <Labels:Pipe Width="372" VerticalAlignment="Center" Canvas.Top="251" StatusComponent="448-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="965" Height="20" HorizontalAlignment="Left" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -171,7 +174,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="68" VerticalAlignment="Top" Canvas.Top="217" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="859" Height="18" HorizontalAlignment="Center" Color="ByProduct">
+        <Labels:Pipe Width="68" VerticalAlignment="Center" Canvas.Top="217" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="895" Height="18" HorizontalAlignment="Left" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -181,7 +184,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="48" VerticalAlignment="Top" Canvas.Top="123" StatusComponent="445-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="869" Height="18" HorizontalAlignment="Center" Color="ByProduct">
+        <Labels:Pipe Width="48" VerticalAlignment="Center" Canvas.Top="123" StatusComponent="445-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="905" Height="18" HorizontalAlignment="Left" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -191,33 +194,32 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:VS_Airlock Width="64" VerticalAlignment="Top" Canvas.Top="144" Canvas.Left="861" Height="61" HorizontalAlignment="Center"/>
-        <Separation:SA_Elutriator Width="84" Canvas.Left="852" Canvas.Top="229" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Blowers:VT_CMM_BlowerAirCompressor Height="50" Canvas.Left="999" Canvas.Top="237" Width="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Height="45" Canvas.Left="1125" Canvas.Top="238" Width="45" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="446-01-MA1" Canvas.Left="924" Canvas.Top="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="446-01-MA1" Canvas.Left="964" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="448-01-MA1" Canvas.Left="981" Canvas.Top="292" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="572" Canvas.Top="294" Height="52" Width="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="448-01-MA1" Canvas.Left="1102" Canvas.Top="292" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="608" Canvas.Top="312" Height="45" Width="45" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="445-01-MA1" Canvas.Left="552" Canvas.Top="240" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:DCE_DryingCentrifuge Height="234" Width="144" RenderTransformOrigin="0.5,0.5" Canvas.Left="334" Canvas.Top="277" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="129" Canvas.Left="205" Canvas.Top="464" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="445-01-MA1" Canvas.Left="588" Canvas.Top="254" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="134" Canvas.Left="241" Canvas.Top="464" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
-            ComponentName="442-01-MA1" Canvas.Left="171" Canvas.Top="508" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="442-01-MA1" Canvas.Left="200" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="443-01-MA1" Canvas.Left="349" Canvas.Top="245" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="443-01-MA1" Canvas.Left="381" Canvas.Top="254" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="443-02-MA1" Canvas.Left="217" Canvas.Top="255" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="238" Canvas.Top="310" Height="52" Width="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="443-02-MA1" Canvas.Left="247" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="268" Canvas.Top="313" Height="45" Width="45" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DCE_Centrifuge Canvas.Left="369" Canvas.Top="317" Height="184" Width="143" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="28" Stroke="Black" Width="2" Canvas.Left="206" Canvas.Top="322" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="904" Canvas.Top="152" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50"/>
+        <Machines:V01_VS_Airlock Canvas.Left="1310" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50"/>
+        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="848" Canvas.Top="470" HorizontalAlignment="Left" VerticalAlignment="Center" Height="86" Width="164"/>
+        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1253" Canvas.Top="470" Height="86" Width="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_SA_Elutriator Canvas.Left="888" Canvas.Top="229" Height="227" Width="84" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="787" Canvas.Top="597" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="485-BAGS" DetailsPageName="D485" Canvas.Left="904" Canvas.Top="651"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="1192" Canvas.Top="597" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="487-BAGS" DetailsPageName="D487" Canvas.Left="1309" Canvas.Top="651" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
