--- a/Prevu.Synoptics.V2150_Planeta/P970.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/P970.xaml
@@ -312,7 +312,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:EC_Filtro Height="136" Canvas.Left="1377" Canvas.Top="402" Width="125" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Rectangle Height="139" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="662" Canvas.Top="365" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="633" Canvas.Top="313" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:External.RenderTransform>
@@ -344,7 +343,6 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:EC_Filtro Height="136" Canvas.Left="1021" Canvas.Top="408" Width="125" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Rectangle Height="124" Stroke="Black" Width="8" Fill="Gray" RenderTransformOrigin="0.5,0.5" Canvas.Left="176" Canvas.Top="177" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -355,8 +353,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="246" Canvas.Top="168" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:EC_Filtro Height="136" Canvas.Left="219" Canvas.Top="222" Width="125" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="255" Canvas.Top="165" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="63" RenderTransformOrigin="0.5,0.5" StatusComponent="978-01-MA1" Canvas.Left="180" Canvas.Top="569" Color="Air" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -367,8 +364,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:DetailsLabel ComponentName="978-FILTER" DetailsPageName="D978" Canvas.Left="246" Canvas.Top="501" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:EC_Filtro Height="136" Canvas.Left="219" Canvas.Top="555" Width="125" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DetailsLabel ComponentName="978-FILTER" DetailsPageName="D978" Canvas.Left="255" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="124" Stroke="Black" Width="8" Fill="Gray" RenderTransformOrigin="0.5,0.5" Canvas.Left="176" Canvas.Top="514" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -389,9 +385,8 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:EC_Filtro Height="136" Canvas.Left="692" Canvas.Top="408" Width="125" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DetailsLabel ComponentName="976-FILTER" DetailsPageName="D976" Canvas.Left="1048" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="984-FILTER" DetailsPageName="D984" Canvas.Left="1403" Canvas.Top="348" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="976-FILTER" DetailsPageName="D976" Canvas.Left="1056" Canvas.Top="351" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="984-FILTER" DetailsPageName="D984" Canvas.Left="1403" Canvas.Top="345" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
             ComponentName="958-71-ECS2" Canvas.Left="550" Canvas.Top="345" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel 
@@ -441,6 +436,11 @@
         <Labels:JumpLabel 
             JumpToLabel="887-01-MA1" Canvas.Left="857" Canvas.Top="121" JumpFromLabel="887-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel Canvas.Left="1208" Canvas.Top="114" JumpFromLabel="849-01-MA1" JumpToLabel="849-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="219" Canvas.Top="223" HorizontalAlignment="Center" VerticalAlignment="Top" Width="133"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="219" Canvas.Top="557" Width="133" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="685" Canvas.Top="408" Width="133" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="1020" Canvas.Top="408" Width="133" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="1370" Canvas.Top="404" Width="132" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 
 </UserControl>
