--- a/Prevu.Synoptics.V2150_Planeta/D140.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D140.xaml
@@ -40,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Belts:NT_BottleSorter_wRoll Canvas.Left="18" Canvas.Top="50" Height="154" Width="376" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_NT_Belt_BottleSorter_wRoll Canvas.Left="18" Canvas.Top="50" Height="154" Width="376" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="56" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -77,5 +77,6 @@
             ComponentName="141-02-EC1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="140-01-MA2" Canvas.Left="331" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+
     </Canvas>
 </UserControl>
