--- a/Prevu.Synoptics.V2150_Planeta/D150.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D150.xaml
@@ -40,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Belts:NT_BottleSorter Canvas.Left="18" Canvas.Top="50" Height="154" Width="376"/>
+        <Machines:V01_NT_Belt_BottleSorter Canvas.Left="18" Canvas.Top="50" Height="154" Width="376" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="56" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -75,5 +75,6 @@
             ComponentName="150-01-MA1" Canvas.Left="33" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="151-02-EC1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        
     </Canvas>
 </UserControl>
