--- a/Prevu.Synoptics.V2150_Planeta/D180.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D180.xaml
@@ -40,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Belts:NT_BottleSorter_wRoll Canvas.Left="18" Canvas.Top="50" Height="154" Width="376" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_NT_Belt_BottleSorter_wRoll Height="154" Width="376" HorizontalAlignment="Center" Canvas.Left="18" VerticalAlignment="Top" Canvas.Top="50" />
         <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="56" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
