--- a/Prevu.Synoptics.V2150_Planeta/D195.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D195.xaml
@@ -40,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Belts:NT_Diverter Canvas.Left="15" Canvas.Top="58" Height="154" Width="376" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_NT_Belt_wMetalDetector_Diverter Height="154" Width="376" Canvas.Left="15" Canvas.Top="58" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="56" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -77,5 +77,6 @@
             ComponentName="195-02-EC1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="195-21-CV1" Canvas.Left="328" Canvas.Top="68" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        
     </Canvas>
 </UserControl>
