--- a/Prevu.Synoptics.V2150_Planeta/D311.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D311.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:Stirrer="clr-namespace:Prevu.Drawings.Machines.Stirrer;assembly=Prevu.Drawings" xmlns:Silos="clr-namespace:Prevu.Drawings.Machines.Silos;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D311" 
+             x:Class="Prevu.Synoptics.D311" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="500" Width="400">
@@ -14,10 +14,8 @@
         <Rectangle Height="2" Stroke="Black" Width="61" Canvas.Left="239" Canvas.Top="443" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Rectangle Height="81" Stroke="Black" Width="2" Canvas.Left="105" Canvas.Top="364" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="2" Stroke="Black" Width="63" Canvas.Left="105" Canvas.Top="443" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Silos:SL50MC_BufferSilo_ScrewDetail Canvas.Left="39" Canvas.Top="33" Height="344" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="311-01-MA1" Canvas.Left="155" Canvas.Top="353" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="311-02-MA1" Canvas.Left="155" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_SL_DETAIL_BufferSilo_ExtractionScrew Canvas.Left="39" Canvas.Top="33" Height="344" Width="323" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="311-01-MA1" Canvas.Left="155" Canvas.Top="353" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="311-02-MA1" Canvas.Left="155" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
