--- a/Prevu.Synoptics.V2150_Planeta/D430.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D430.xaml
@@ -10,27 +10,27 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="226" Width="807">
-        <Separation:VSP_Datail_7_Paddles_SeparationTank Canvas.Left="16" Canvas.Top="58" Height="145" Width="782" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+        <Machines:V01_VSP_DETAIL_SepTank_w7Paddles Canvas.Left="16" Canvas.Top="58" Height="145" Width="782" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
 		VerticalAlignment="Center" 
-		ComponentName="430-01-MA1" Canvas.Left="66" Canvas.Top="28"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA2" Canvas.Left="165" Canvas.Top="28"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA3" Canvas.Left="263" Canvas.Top="28"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA4" Canvas.Left="362" Canvas.Top="28"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA5" Canvas.Left="463" Canvas.Top="28"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA6" Canvas.Left="564" Canvas.Top="28"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-01-MA7" Canvas.Left="665" Canvas.Top="28"/>
+		ComponentName="430-01-MA1" Canvas.Left="41" Canvas.Top="34"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="430-01-MA2" Canvas.Left="148" Canvas.Top="34"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="430-01-MA3" Canvas.Left="255" Canvas.Top="34"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="430-01-MA4" Canvas.Left="362" Canvas.Top="34"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="430-01-MA5" Canvas.Left="469" Canvas.Top="34"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="430-01-MA6" Canvas.Left="576" Canvas.Top="34"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="430-01-MA7" Canvas.Left="683" Canvas.Top="34"/>
     </Canvas>
 </UserControl>
