--- a/Prevu.Synoptics.V2150_Planeta/D487.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D487.xaml
@@ -11,7 +11,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Width="541" Height="350">
-        <BigBag:BBF_DoubleBigBagFilling Canvas.Left="10" Canvas.Top="10" Height="330" Width="523" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="10" Canvas.Top="10" Height="330" Width="523" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="487-61-BAG" SignalName="LSH" Canvas.Left="115" Canvas.Top="71"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Center" 
