--- a/Prevu.Synoptics.V2150_Planeta/D910.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/D910.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}"  >
     <Canvas Height="427" Width="273">
-        <FlakesSorting:NEW_FKS_FlakesSorter Canvas.Left="10" Canvas.Top="10" Height="407" Width="256"/>
+        <Machines:V01_FKS_FlakesSorter_SingleCH Canvas.Left="10" Canvas.Top="10" Height="407" Width="256" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="910-61-LEV" SignalName="LSHA" Canvas.Left="110" Canvas.Top="32"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="910-61-LEV" SignalName="LSH" Canvas.Left="110" Canvas.Top="81" />
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="910-61-LEV" SignalName="LSL" Canvas.Left="112" Canvas.Top="175"/>
